...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text("Choose Your Device"),
        backgroundColor: Colors.blue,
        key: ValueKey('chooseDeviceAppBar'), // Add key to the app bar
      ),
      body: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Text(
            "What coffee maker are you using?",
...
      fontFamily: 'Montserrat',
      fontSize: 14,
      fontWeight: FontWeight.normal,
      color: Colors.white,
    ),
  ),
  key: ValueKey('continueButton'), // Add key to the continue button
),
        ],
      ),
    );
  }

...
